Fix dashboard sidebar overflow issue

--- a/cake2cribs/app/webroot/less/Dashboard/navigation-bar.less
+++ b/cake2cribs/app/webroot/less/Dashboard/navigation-bar.less
@@ -107,37 +107,37 @@
 				color: #009966;
 			}
 		}
-		.messages_list_item
-		{
-			height: auto;
-			line-height: 20px;
-			padding: 5px !important;
-			font-weight: normal;
+	}
+	.messages_list_item
+	{
+		height: auto;
+		line-height: 20px;
+		padding: 5px !important;
+		font-weight: normal;
 
-			div
-			{
-				width: 100%;
-			}
-			.message_title
-			{
-				line-height: 20px;
-				text-overflow: ellipsis;
-				overflow: hidden;
-				white-space: nowrap;
-			}
-			.message_desc
-			{
-				line-height: 12px;
-				font-size: 12px;
-				text-overflow: ellipsis;
-				overflow: hidden;
-				white-space: nowrap;
-				padding-bottom: 3px;
-			}
-			&.unread
-			{
-				font-weight: bold;
-			}
+		div
+		{
+			width: 100%;
+		}
+		.message_title
+		{
+			line-height: 20px;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			white-space: nowrap;
+		}
+		.message_desc
+		{
+			line-height: 12px;
+			font-size: 12px;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			white-space: nowrap;
+			padding-bottom: 3px;
+		}
+		&.unread
+		{
+			font-weight: bold;
 		}
 	}
 
@@ -160,6 +160,7 @@
 			padding: 0 10px;
 			font-size: 12px;
 			line-height: 30px;
+			font-weight: bold;
 		}
 		li:not(.nav-header)
 		{
@@ -170,7 +171,6 @@
 			border-bottom-width: 1px;
 			color: hsl(0, 0%, 50%);
 			text-shadow: hsla(0, 100%, 100%, 0.498039) 0px 1px 0px;
-			font-weight: bold;
 
 			&:hover
 			{
@@ -194,6 +194,7 @@
 			float: left;
 			margin: 3px 10px;
 			background-color: #F0F0F0;
+			width: 150px;
 		}
 	}
 
